# CarDashBoard-Sample

./: CMakeLists.txt  README.md  main.cpp
Controls/: carsliders.cpp  carsliders.h  dashcontrol.cpp  dashcontrol.h
DashboardInterface/: dashboardinterface.cpp  dashboardinterface.h
Widgets/: battery.cpp  battery.h  bonnet.cpp  bonnet.h  boot.cpp  boot.h  dippedbeam.cpp  dippedbeam.h  door.cpp  door.h  engine.cpp  engine.h  foglight.cpp  foglight.h  fuelgauge.cpp  fuelgauge.h  highbeam.cpp  highbeam.h  oil.cpp  oil.h  revolutiongauge.cpp  revolutiongauge.h  speedometer.cpp  speedometer.h  temperaturegauge.cpp  temperaturegauge.h  traction.cpp  traction.h  turnleft.cpp  turnleft.h  turnright.cpp  turnright.h
